--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -8,7 +8,7 @@
 
 .navbar {
   position: sticky;
-  top: 10px;
+  top: 20px;
   z-index: 50;
 }
 
@@ -21,14 +21,14 @@
   list-style: none;
   max-width: 75%;
   margin: 0 auto;
-  border-radius: 5px;
+  border-radius: 17px;
   padding: 10px;
   gap: 5px;
 }
 
 .navBarItems li {
   cursor: pointer;
-  color: white;
+  color: black;
 }
 
 /* ABOUT ME SECTION */
